# enterprise-ai-platform

./: .gitignore  README.md
.claude/: settings.local.json
agent-service/: .env.example  .gitignore  debug_docx.py  main.py  requirements.txt  seed_data.py  test_preview.py  test_preview_v2.py
agent-service/agents/: code_agent.py  planner.py  rag_agent.py  review_agent.py
agent-service/api/: forge_routes.py  knowledge.py  preview.py  routes.py  tools.py
agent-service/app/: __init__.py  forge_client.py  forge_config.py  health.py  internal_client.py
agent-service/rag/: embedding.py  reranker.py  retriever.py
agent-service/tools/: file_tool.py  github_tool.py  mysql_tool.py
agent-service/workflows/: graph.py
backend/: pom.xml
backend/ruoyi-ai/: pom.xml
forge-agent/: .gitignore  README.md  USAGE.md  linked_list.py  pyproject.toml  quicksort.py  smoke_test.py
forge-agent/agent/: core.py  event_log.py  prompt.py  task.py
forge-agent/config/: default.yaml  schema.py
forge-agent/context/: history.py  repo_map.py  token_budget.py
forge-agent/entry/: chat.py  cli.py  github_issue.py
forge-agent/llm/: anthropic_backend.py  base.py  openai_compat.py  router.py
forge-agent/tests/: test_chat.py  test_confirm.py  test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_sandbox.py  test_stream.py
forge-agent/tools/: base.py  file_tool.py  git_tool.py  runtime.py  search_tool.py  shell_tool.py  test_tool.py
frontend/: .env.development  .env.production  .env.staging  package.json  pnpm-lock.yaml  vite.config.ts
(+711 files in other folders)
